segundo dia do baguio

--- a/index.html
+++ b/index.html
@@ -31,17 +31,26 @@
                 <div class="text-1">Ola, meu nome é </div>
                 <div class="text-2">João Pedro De Castro</div>
                 <div class="text-3">eu sou <span>Dev</span></div>
+                <a href="#">Contratar-me</a>
             </div>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- sobre -->
+    <section class="about" id="about"> 
+        <div class="max-width">
+            <h2 class="title">Sobre</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="IMG/img1.png" alt="">    
+                </div>
+                <div class="column right">
+                    <div class="text">Sou João e sou <span>Dev</span></div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt alias natus odit harum provident? Officia aliquid cum voluptatibus placeat iure enim exercitationem explicabo incidunt. Eveniet vero neque optio sed praesentium!</p>
+                    <a href="#">Dowload CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
